--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Calculator</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="calc-container">
+    <div class="calc-base">
+      <div class="visor">
+        <div class="displaying">123</div>
+      </div>
+      <div class="buttons">
+        <div class="row first">
+          <button class="all-clear">AC</button>
+          <button class="invert">-/+</button>
+          <button class="operator">/</button>
+        </div>
+        <div class="row second">
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
+          <button class="operator">*</button>
+        </div>
+        <div class="row third">
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
+          <button class="operator">-</button>
+        </div>
+        <div class="row fourth">
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
+          <button class="operator">+</button>
+        </div>
+        <div class="row fifth">
+          <button id="zero" class="number">0</button>
+          <button class="number">.</button>
+          <button class="number">=</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
