--- a/index.html
+++ b/index.html
@@ -1,50 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculator</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="calc-container">
-    <div class="calc-base">
-      <div class="visor">
-        <div class="displaying">123</div>
-      </div>
-      <div class="buttons">
-        <div class="row first">
-          <button class="all-clear">AC</button>
-          <button class="invert">-/+</button>
-          <button class="operator">/</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculator</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="calc-container">
+      <div class="calc-base">
+        <div class="visor">
+          <div class="displaying"></div>
         </div>
-        <div class="row second">
-          <button class="number">7</button>
-          <button class="number">8</button>
-          <button class="number">9</button>
-          <button class="operator">*</button>
-        </div>
-        <div class="row third">
-          <button class="number">4</button>
-          <button class="number">5</button>
-          <button class="number">6</button>
-          <button class="operator">-</button>
-        </div>
-        <div class="row fourth">
-          <button class="number">1</button>
-          <button class="number">2</button>
-          <button class="number">3</button>
-          <button class="operator">+</button>
-        </div>
-        <div class="row fifth">
-          <button id="zero" class="number">0</button>
-          <button class="number">.</button>
-          <button class="number">=</button>
+        <div class="buttons">
+          <div class="row first">
+            <button data-button="allclear" class="all-clear">AC</button>
+            <button data-button="invert" class="invert">-/+</button>
+            <button data-operator="divide" class="operator">/</button>
+          </div>
+          <div class="row second">
+            <button data-button="7" class="number">7</button>
+            <button data-button="8" class="number">8</button>
+            <button data-button="9" class="number">9</button>
+            <button data-operator="multiply" class="operator">*</button>
+          </div>
+          <div class="row third">
+            <button data-button="4" class="number">4</button>
+            <button data-button="5" class="number">5</button>
+            <button data-button="6" class="number">6</button>
+            <button data-operator="subtract" class="operator">-</button>
+          </div>
+          <div class="row fourth">
+            <button data-button="1" class="number">1</button>
+            <button data-button="2" class="number">2</button>
+            <button data-button="3" class="number">3</button>
+            <button data-operator="add" class="operator">+</button>
+          </div>
+          <div class="row fifth">
+            <button data-button="0" class="number">0</button>
+            <button data-button="dot" class="other">.</button>
+            <button data-button="result" class="operator">=</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
