still need some working

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="row fifth">
             <button data-button="0" class="number">0</button>
             <button data-button="dot" class="other">.</button>
-            <button data-button="result" class="operator">=</button>
+            <button data-operator="result" class="operator">=</button>
           </div>
         </div>
       </div>
